--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <script src="script.js"></script>
     <style>
         body {
-    background: white;
-  }
+        background: white;
+
+      }
   .calculator{
     margin-top: 50px;
-    
       width: 500px;
       height: 600px;
       padding: 15px;  
@@ -21,11 +21,13 @@
       grid-template-columns: repeat(5, 1fr);
       grid-auto-rows: 1fr;
       grid-gap: 15px;
-    background: rgb(211, 169, 219);
+      background: rgb(211, 169, 219);
+      margin-left: 30%;
+
   }
   
   .calculator input {
-      font-size: 20px;
+      font-size: 40px;
   }
   
   #display{
@@ -51,7 +53,7 @@
         <input type="button" value="4" onclick="addToDisplay('4')">
         <input type="button" value="5" onclick="addToDisplay('5')">
         <input type="button" value="6" onclick="addToDisplay('6')">
-        <input type="button" value="*" onclick="addToDisplay('*')">
+        <input type="button" value="x" onclick="addToDisplay('x')">
         <br>
         <input type="button" value="1" onclick="addToDisplay('1')">
         <input type="button" value="2" onclick="addToDisplay('2')">
